--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
   "name": "modu-threejs-vector",
   "version": "1.0.0",
-  "description": "modu",
+  "description": "Nature Of CODE에서 소개된 Vector의 특성을 속도와 가속도를 설정하여 움직임을 표현한 예제입니다.",
   "main": "app.js",
+  "dependencies": {
+    "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "n3d-threejs": "^76.0.0",
+    "webpack": "^2.6.1"
+  },
   "scripts": {
-    "build": "start webpack --watch ./src/index.js ./build/index.bundle.js",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dhygns/modu-threejs-practice00.git"
+    "url": "git+https://github.com/dhygns/modu-threejs-vector.git"
   },
-  "keywords": [
-    "practice",
-    "example"
-  ],
-  "author": "donghyeon kim",
+  "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dhygns/modu-threejs-practice00/issues"
+    "url": "https://github.com/dhygns/modu-threejs-vector/issues"
   },
-  "homepage": "https://github.com/dhygns/modu-threejs-practice00#readme",
-  "dependencies": {
-    "jquery": "^3.2.1",
-    "n3d-threejs": "^76.0.0"
-  },
-  "devDependencies": {
-    "express": "^4.15.3",
-    "webpack": "^2.6.1"
-  }
+  "homepage": "https://github.com/dhygns/modu-threejs-vector#readme"
 }
